  contains the specified playing time, allowing playback to start smoothly
  without lags. Works similar to --prebuffer_size but gives better control
  because it does not depend on the bit rate. An example: when set to
  25 seconds for HLS transcoding, this will make sure that at least 2 complete
  segments will be available once the file is released and visible.

Important changes in 2.12 (2022-08-27):

* The code has been run through clang-tidy to identify bug-prone or
  inefficient code, and to find parts that could be modernised to C++17.
  Several issues could be resolved. Sometimes, many lines of code could be
  replaced by a few. Some parts run far more efficiently than before. C++17
  is cool. I need to get a t-shirt.
* Bugfix: In get prores bitrate(), a crash that might have happened under
  unusual circumstances has been corrected. If the best match resolution
  could not be found, array access out-of-bounds could happen.
* Bugfix: Several unlikely, but potential problems that could have happened
  when subtitle decoding failed or delayed video/audio packets couldn't be
  decoded have been fixed.
* Bugfix: An internal problem could cause the application to crash. Should
  never happen, though. Fixed anyway.
* Bugfix: Sometimes, the last segment's estimated size was incredibly small -
  about 2 bytes. Each segment should have the same predicted size as it is
  calculated simply by dividing the projected size of the entire file by the
  number of segments. Following transcoding, the size was accurate.

Important changes in 2.11 (2022-06-16):

* Feature: Issue #86: Smart transcode now detects if a source file is audio only
  and uses the correct target format. For example, with --destination=webm+mp3, if
  one MP4 input file contains a video stream and another an audio stream only,
  the resulting files will be WebM (for the video input) and mp3 for the audio only
  file.
* Feature: Issue #137: Add --no_subtitles option to turn subtitles off.